# todc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: compare_snapshot_implementations.rs  linearizability.rs  snapshot.rs
benches/linearizability_wlg_checker/: main.rs
src/: lib.rs  linearizability.rs  main.rs  register.rs  snapshot.rs  sync.rs
src/linearizability/: entry.rs  history.rs
src/register/: atomic.rs  integer.rs  mutex.rs
src/snapshot/: aad_plus.rs  aad_plus_93.rs  ar_98.rs
src/snapshot/aad_plus_93/: bounded.rs  unbounded.rs
tests/: aad_plus_93.rs  main.rs
tests/linearizability/: etcd.rs  main.rs
tests/snapshot/: aad_plus_93.rs  ar_98.rs  common.rs  main.rs  mod.rs
tests/snapshot/common/: mod.rs
todc-mem/: Cargo.toml  README.md
todc-mem/benches/: compare_snapshot_implementations.rs
todc-mem/src/: lib.rs  register.rs  snapshot.rs  sync.rs
todc-mem/src/register/: atomic.rs  mutex.rs
todc-mem/src/snapshot/: aad_plus_93.rs  ar_98.rs  mutex.rs
todc-mem/src/snapshot/aad_plus_93/: bounded.rs  unbounded.rs
todc-mem/tests/: snapshot.rs
todc-mem/tests/snapshot/: aad_plus_93.rs  ar_98.rs  common.rs  main.rs
todc-mp/: Cargo.toml  README.md
todc-mp/src/: lib.rs  main.rs  net.rs  register.rs
todc-mp/tests/: main.rs  register.rs
todc-mp/tests/common/: mod.rs
todc-net/: Cargo.toml  README.md
todc-net/examples/atomic-register-docker-minikube/: .env  Cargo.toml  Dockerfile  README.md  deployment.yaml  docker-compose.yml
todc-net/examples/atomic-register-docker-minikube/src/: main.rs
todc-net/examples/atomic-register-hyper/: Cargo.toml  Distributed Computing Rocks  README.md
todc-net/examples/atomic-register-hyper/src/: main.rs
todc-net/src/: abd_95.rs  atomic.rs  hyper_util_tokio_io.rs  lib.rs  net.rs  register.rs
todc-net/src/atomic/: register.rs
todc-net/src/atomic/register/: abd_95.rs
todc-net/src/register/: abd_95.rs
todc-net/tests/: abd_95.rs  register.rs
todc-net/tests/abd_95/: common.rs  linearizability.rs  local.rs  read.rs  write.rs
todc-net/tests/atomic/: main.rs  register.rs
todc-net/tests/atomic/register/: linearizability.rs
todc-net/tests/common/: mod.rs
todc-net/tests/register/: abd_95.rs
todc-net/tests/register/abd_95/: common.rs  linearizability.rs  local.rs  read.rs  write.rs
todc-sm/: Cargo.toml
todc-sm/benches/: compare_snapshot_implementations.rs
todc-sm/src/: lib.rs  snapshot.rs  sync.rs
todc-sm/src/snapshot/: ar_98.rs  mutex.rs
todc-sm/tests/: main.rs
todc-sm/tests/snapshot/: aad_plus_93.rs  ar_98.rs  common.rs  mod.rs
todc-utils/: Cargo.toml  README.md
todc-utils/benches/: wgl_checker.rs  wlg_checker.rs
todc-utils/src/: lib.rs  linearizability.rs  specifications.rs
todc-utils/src/linearizability/: history.rs
todc-utils/src/specifications/: etcd.rs  register.rs  snapshot.rs
todc-utils/tests/: main.rs
todc-utils/tests/linearizability/: etcd.rs
todc-utils/tests/linearizability/etcd/: download_logs.sh
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/specifications/: etcd.rs  snapshot.rs
