[package]
name = "todc-mem"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4"
shuttle = { version = "0.6", optional = true}

[dev-dependencies]
criterion = "0.5"
heapless = "0.7"
shuttle = "0.6"
rand = { version =  "0.8", features = ["small_rng"] }
todc-utils = { path = "../todc-utils" }

[features]
shuttle = ["dep:shuttle"]

[[bench]]
name = "compare_snapshot_implementations"
harness = false
