[package]
name = "todc-mem"
description = "Algorithms for shared-memory distributed systems."
version = "0.1.0"
edition = "2021"
license = "MIT"

homepage = "https://github.com/kaymanb/todc/tree/main"
repository = "https://github.com/kaymanb/todc/tree/main"
readme = "README.md"

categories = ["algorithms", "concurrency", "data-structures"]
keywords = ["distributed-systems", "shared-memory", "atomic-snapshot"]

[dependencies]
num = "0.4"
shuttle = { version = "0.6", optional = true}

[dev-dependencies]
criterion = "0.5"
heapless = "0.7"
shuttle = "0.6"
rand = { version =  "0.8", features = ["small_rng"] }
todc-utils = { path = "../todc-utils" }

[features]
shuttle = ["dep:shuttle"]

[[bench]]
name = "compare_snapshot_implementations"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
