[package]
name = "todc-mp"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
http-body-util = "0.1.0-rc.2" 
hyper = { version = "1.0.0-rc.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
turmoil = "0.5"

[target.'cfg(turmoil)'.dependencies]
turmoil = "0.5"
