[package]
name = "todc-net"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
http-body-util = "0.1.0-rc.2" 
hyper = { version = "1.0.0-rc.3", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
turmoil = { version = "0.5", optional = true }

[dev-dependencies]
rand = "0.8.5"
turmoil = "0.5"

[features]
turmoil = ["dep:turmoil"]
