[package]
name = "todc-net"
description = "Algorithms for message-passing (HTTP) distributed systems."
version = "0.1.0"
edition = "2021"
license = "MIT"


homepage = "https://github.com/kaymanb/todc/tree/main"
repository = "https://github.com/kaymanb/todc/tree/main"
readme = "README.md"

categories = ["algorithms", "asynchronous"]
keywords = ["distributed-systems", "message-passing", "atomics"]

[dependencies]
bytes = "1"
http-body-util = "0.1.0-rc.2" 
hyper = { version = "1.0.0-rc.4", features = ["full"] }
pin-project = "1.1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
turmoil = { version = "0.5", optional = true }

[dev-dependencies]
hyper-util = { git = "https://github.com/hyperium/hyper-util.git"}
rand = "0.8.5"
turmoil = "0.5"
todc-utils = { path = "../todc-utils"}
tokio-test = "0.4.3"

[features]
turmoil = ["dep:turmoil"]
