[workspace]

[package]
name = "atomic-register-docker-minikube"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.107"
todc-net = { path = "../../../todc-net" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
